--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -15,6 +15,43 @@ a {
 
 .title {
   font-size: 20px;
+  padding: 0 8px;
+
+  & span {
+    position: relative;
+    padding: 4px 0;
+
+    &::before, &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background-color: #fc2f70;
+      transform: scaleX(0);
+      transition: transform 0.5s ease;
+    }
+
+    &::before {
+      top: 0;
+      transform-origin: right;
+    }
+
+    &:hover::before {
+      transform-origin: left;
+      transform: scaleX(1);
+    }
+
+    &::after {
+      bottom: 0;
+      transform-origin: left;
+    }
+
+    &:hover::after {
+      transform-origin: right;
+      transform: scaleX(1);
+    }
+  }
 }
 
 .nav-title {
