--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,7 +1,37 @@
 .nav {
   height: 64px;
   line-height: 64px;
-  background-color: white;
+
+  &-title {
+    padding: 0 8px;
+  }
+
+  &-menu {
+    text-align: right;
+    padding: 0 16px;
+
+    &-item {
+      padding: 8px 16px;
+      border-radius: 4px;
+
+      &:hover {
+        background-color: #f7f7f7;
+      }
+    }
+  }
+
+  &-drawer-toggle {
+    text-align: center;
+
+    &-button {
+      font-size: 20px;
+      border: none;
+    }
+  }
+
+  &-drawer {
+    line-height: 1em;
+  }
 }
 
 .el-col {
@@ -52,37 +82,6 @@ a {
       transform: scaleX(1);
     }
   }
-}
-
-.nav-title {
-  padding: 0 8px;
-}
-
-.nav-menu {
-  text-align: right;
-  padding: 0 16px;
-
-  &-item {
-    padding: 8px 16px;
-    border-radius: 4px;
-
-    &:hover {
-      background-color: #f7f7f7;
-    }
-  }
-}
-
-.nav-drawer-toggle {
-  text-align: center;
-
-  &-button {
-    font-size: 20px;
-    border: none;
-  }
-}
-
-.nav-drawer {
-  z-index: 1000;
 }
 
 .avatar {
