add class and stylesheet of images

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,3 +18,10 @@ html, body {
 .container {
   padding: 16px 8px;
 }
+
+.article-image {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
