update dependencies and update markdown style

--- a/src/styles/markdown-it.scss
+++ b/src/styles/markdown-it.scss
@@ -4,6 +4,11 @@
   & a {
     text-decoration: none;
     color: #2c3e50;
+    line-height: 1.8em;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
