change markdown-it style

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import './markdown-it';
 @import './markdown';
 @import './iconfont';
+@import url('~highlight.js/scss/default.scss');
 
 html, body {
   margin: 0;
