--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -1,13 +1,14 @@
-code {
+p code {
   padding: 2px 4px;
-  color: #c7254e;
-  background-color: #f9f2f4;
+  color: rgb(199, 37, 78);
+  background-color: rgb(249, 242, 244);
   border-radius: 4px;
 }
 
 .hljs {
-  padding: 16px !important;
+  padding: 12px !important;
   line-height: 1.5em;
+  border-radius: 4px;
 }
 
 blockquote {
